--- a/Clash/config/ACL4SSR_Aiden.ini
+++ b/Clash/config/ACL4SSR_Aiden.ini
@@ -72,7 +72,7 @@ ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Discord.list
 
 ;自定义分组1
-ruleset=🚀 Aiden01,https://github.com/penpan85/rules/blob/main/Custom01.list
+ruleset=🚀 自定义金融类,https://raw.githubusercontent.com/penpan85/ACL4SSR/master/Clash/Ruleset/Custom01.list
 
 ; 国外媒体
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -120,7 +120,7 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 
-custom_proxy_group=🚀 Aiden01`select`[]🚀 节点选择`[]
+custom_proxy_group=🚀 自定义金融类`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`
 ;国内网站走直接连接
 custom_proxy_group=🌏 国内网站`select`[]DIRECT`[]🎯 全球直连
 ;AI类网站走美国节点
