--- a/Clash/config/ACL4SSR_Aiden.ini
+++ b/Clash/config/ACL4SSR_Aiden.ini
@@ -124,7 +124,7 @@ custom_proxy_group=🚀 自定义金融类`select`[]🚀 节点选择`[]🇭🇰
 ;国内网站走直接连接
 custom_proxy_group=🌏 国内网站`select`[]DIRECT`[]🎯 全球直连
 ;AI类网站走美国节点
-custom_proxy_group=💬 OpenAi`select`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=💬 OpenAi`select`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇨🇳 台湾节点`[]🚀 手动切换
 ;国外媒体
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
 ;国外流媒体
