--- a/Clash/config/ACL4SSR_Aiden.ini
+++ b/Clash/config/ACL4SSR_Aiden.ini
@@ -51,7 +51,7 @@ ruleset=🌏 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🌏 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌏 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🌏 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Alibaba.list
-ruleset=🌏 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+
 
 
 ; openAi策略分组的代理集配置
@@ -73,6 +73,7 @@ ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 
 ;自定义分组1
 ruleset=🚀 自定义金融类,https://raw.githubusercontent.com/penpan85/ACL4SSR/master/Clash/Ruleset/Custom01.list
+ruleset=🚀 自定义金融类,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 
 ; 国外媒体
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
