--- a/Clash/config/ACL4SSR_Aiden.ini
+++ b/Clash/config/ACL4SSR_Aiden.ini
@@ -106,6 +106,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/penpan85/ACL4SSR/master/Clash/Ruleset/CourseUsa.list
+ruleset=🎯 全球直连,https://github.com/penpan85/ACL4SSR/blob/master/Clash/UnBan.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 
