--- a/Clash/config/ACL4SSR_Aiden.ini
+++ b/Clash/config/ACL4SSR_Aiden.ini
@@ -70,6 +70,7 @@ ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Adobe.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Discord.list
+ruleset=💬 OpenAi,https://raw.githubusercontent.com/penpan85/ACL4SSR/master/Clash/Ruleset/Custom02.list
 
 ;自定义分组1
 ruleset=🚀 自定义金融类,https://raw.githubusercontent.com/penpan85/ACL4SSR/master/Clash/Ruleset/Custom01.list
